# ppfive

./: .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: build-and-deploy-on-pypi.yml  build-and-deploy-wheels-on-pypi.yml  pytest.yml
doc/benchmarking/: n512_comparison_v1.py  n512_comparison_v3.py  n512_ppview.py  plot_cf_p5_boxplots.py  plot_ppview_perf.py  pp5_remote_test.py
doc/examples/: n512_comparison_v1.py  n512_example.py  plot_ppview_perf.py  pp5_remote_test.py
ppfive/: __init__.py  file.py  inspect.py  ppdump.py  variable.py  wgdos.py
ppfive/c_ext/: wgdos_module.c
ppfive/core/: __init__.py  constants.py  data.py  filetype.py  header.py  interpret.py  models.py  references.py  scanner.py  stash_table.py  variables.py
ppfive/io/: __init__.py  base.py  chunk_read.py  fileobj.py  fsspec_reader.py  local.py
tests/data/: test2-viacf.nc
tests/tests_core/: test_data_loading.py  test_file_api.py  test_filetype.py  test_packed_data_loading.py  test_pyfive_quack_contract.py  test_pyfive_registration.py  test_scanner.py  test_stash_table.py  test_wgdos_extension.py
tests/tests_io/: test_cf_python_registration_bridge.py  test_chunk_index.py  test_fileobj_reader.py  test_fsspec_reader.py  test_lazy_subselection.py  test_local_reader.py  test_local_reader_reopen.py  test_parallel_reads.py  test_ppdump.py  test_real_ff_file.py  test_real_pp_file.py  test_real_um_files.py  test_reference_index.py  test_um_metadata_attrs.py
