[build-system]
requires = ["setuptools>=69", "wheel", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "ppfive"
version = "0.1.0"
description = "PP/Fields reader with pyfive-style high-level API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{name = "David Hassell"},
	{name = "Alan Iwi"},
	{name = "Bryan Lawrence"},
]
dependencies = [
	"numpy>=1.24",
]

[project.optional-dependencies]
io = ["fsspec>=2024.3.0"]
test = [
	"cf-python>=3.16.0",
	"pytest>=8",
	"pytest-cov>=5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ppfive*"]

[tool.setuptools.package-data]
ppfive = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
