[build-system]
requires = [
  "setuptools>=80",
  "setuptools_scm>=8",
  "numpy>=1.24",
]
build-backend = "setuptools.build_meta"

[project]
name = "ppfive"
version = "0.1.0"
description = "PP/Fields reader with pyfive-style high-level API"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
authors = [
	{name = "David Hassell"},
	{name = "Alan Iwi"},
	{name = "Bryan Lawrence"},
        {name = "Valeriu Predoi - package"},
]
dependencies = [
	"cftime",
	"numpy>=1.24",
	"pyfive>=1.1.2",
]

[project.optional-dependencies]
io = ["fsspec>=2024.3.0"]
test = [
	"pytest>=8",
	"pytest-cov>=5",
        "pytest-xdist",
]

[project.scripts]
ppdump = "ppfive.ppdump:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["ppfive*"]

[tool.setuptools.package-data]
ppfive = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
